--- a/styles/footer.css
+++ b/styles/footer.css
@@ -1,7 +1,7 @@
 /* FOOTER */
 
 .footer {
-    padding: 8rem;
+    padding: 2rem ;
     background-color: var(--color-blackLigth);
 }
 
@@ -49,7 +49,7 @@
     gap: 2rem;
     align-items: center;
     justify-content: center;
-    margin-bottom: 1rem;
+    margin-top: 1rem;
 }
 
 .container-icons a {
@@ -69,5 +69,71 @@
 
     to {
         transform: translateY(-8px) scale(1.1);
+    }
+}
+
+
+@media (max-width:480px) {
+    .footer {
+        padding: 1rem 3rem;
+    }
+
+    .address-container {
+        width: 300px;
+        margin: 0 auto;
+        flex-direction: column;
+    }
+
+    .container-decoration {
+        margin-top: 2rem;
+    }
+
+    .container-icons a {
+        font-size: 1.3rem;
+        margin-top: 1rem;
+    }
+
+    .text-address {
+        font-size: 1.2rem;
+    }
+
+    .container-decoration h2 {
+        font-size: 1.2rem;
+    }
+
+    .btn-address {
+        padding: .3rem;
+    }
+
+    .btn-address a {
+        font-size: .9rem;
+    }
+}
+
+@media (min-width: 481px) and (max-width: 767px) {
+
+    .address-container {
+        width: 400px;
+        margin: 0 auto;
+    }
+
+    .container-icons a {
+        font-size: 1.3rem;
+    }
+
+    .address-container {
+        flex-direction: column;
+    }
+}
+
+@media (min-width: 768px) and (max-width: 991px)  {
+
+    .address-container {
+        width: 600px;
+        margin: 0 auto;
+    }
+
+    .container-icons a {
+        font-size: 1.7rem;
     }
 }
