--- a/styles/styles.css
+++ b/styles/styles.css
@@ -56,7 +56,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-top: 2.5rem;
+    margin: 2.5rem 0
 }
 
 .text-sobre {
@@ -118,7 +118,7 @@
 }
 
 .desc-work {
-    margin: 0 2rem;
+    margin: 2rem;
 }
 
 .title-work {
@@ -136,6 +136,11 @@
     line-height: 1.4rem;
     font-family: var(--font-text);
     text-align: center;
+}
+
+.text-containerTwo {
+    display: flex;
+    gap: 2rem;
 }
 
 
@@ -167,27 +172,75 @@
 
 
 /* media */
-@media (max-width: 935px) {
+@media(max-width: 480px) {
+    .bg-home {
+        height: 450px;
+    } 
+
+    .bg-home::before {
+        height: 70vh;
+    }
+
+    .title-sobre {
+        font-size: 2.8rem;
+    }
+
+    .desc-section {
+        margin-top: 2rem;
+    }
+
+    .text-containerTwo {
+        flex-direction: column;
+    }
+    
+}
+
+@media(min-width: 481px) and (max-width: 767px) {
+    .title-sobre {
+        font-size: 2.5rem;
+    }
+
+    .bg-home::before {
+        height: 70vh;
+    }
+    
+    .bg-home {
+        height: 530px;
+    } 
+
+    
+    .text-containerTwo {
+        flex-direction: column;
+    }
+
+    
+    
+}
+
+
+@media(min-width: 768px) and (max-width: 991px)  {
+    
+    .title-sobre {
+        font-size: 3.2rem;
+    }
+
+
     .card-container {
         flex-direction: column-reverse;
+
     }
 
     .card-img {
         width: 100%;
     }
 
-
 }
 
 
-@media (max-width: 820px) {
-   .text-container {
-    flex-direction: column;
-    gap: 6rem;
-   }
 
-    
-}
+
+
+
 
 
 
