--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,5 +1,6 @@
 
 /* Sobre SECTION BG  */
+
 .bg-home {
     position: relative;
     height: 600px;
@@ -27,15 +28,13 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    height: 70%;
+    height: 70vh;
     letter-spacing: 1px;
     text-transform: uppercase;
     font-family: var(--text-decoration);
 }
 
-.bg-container {
-    height: 100vh;
-}
+
 
 /* Section descrição */
 
@@ -175,10 +174,148 @@
 
 /* media */
 
+@media (min-width: 320px) and (max-width: 480px) {
 
-@media(min-width: 320px) and (max-width: 480px) {
+    .bg-home::before {
+        height: 45vh
+    }
+
+    .bg-home {
+        height: 350px;
+    }
+
+    .title-sobre {
+        font-size: 1.6rem;
+        height: 45vh;
+    }
+
+    .text-sobre {
+        font-size: 1.4rem;
+        width: auto;
+        padding: 0 1rem;
+    }
+
+    .card-container {
+        flex-direction: column-reverse;
+        text-align: center;
+    }
+
+    .card-img {
+        width: 100%;
+    }
+
+    .desc-title {
+        font-size: 1.6rem;
+    }
+
+   .desc-work {
+        margin: 0;
+   }
+
+    .text-containerTwo {
+        flex-direction: column;
+    }
+
+}
+
+
+
+
+@media (min-width: 481px) and (max-width: 767px)  {
+
+    .bg-home::before {
+        height: 45vh
+    }
+
+    .bg-home {
+        height: 350px;
+    }
+
+    .title-sobre {
+        font-size: 2.4rem;
+        height: 45vh;
+    }
+
+    .card-container {
+        flex-direction: column-reverse;
+        text-align: center;
+        
+    }
+
+    .card-img {
+        width: 100%;
+    }
+
+    .desc-title {
+        font-size: 1.9rem;
+    }
+
+
+    .text-containerTwo {
+        flex-direction: column;
+    }
+
+
+}
+
+
+@media (min-width: 768px) and (max-width: 991px)   {
+
+    .bg-home::before {
+        height: 60vh
+    }
+
+    .bg-home {
+        height: 450px;
+    }
+
+    .title-sobre {
+        font-size: 2.9rem;
+        height: 60vh;
+    }
+
+    .card-container {
+        flex-direction: column-reverse;
+        text-align: center;
+    }
+
+    .card-img {
+        width: 100%;
+    }
+
+    .desc-title {
+        font-size: 2.5rem;
+    }
+
+
+    .text-containerTwo {
+        flex-direction: column;
+    }
+
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* @media(max-width: 480px) {
     .bg-home::before {
         height: 50vh;
+        overflow-x: hidden;
     }
     
     .bg-home {
@@ -253,7 +390,7 @@
     } 
 
     .bg-container {
-        height: 60vh;
+        height: 55vh;
     }
 
 
@@ -284,7 +421,7 @@
 
 @media(min-width: 992px) and (max-width: 1199px) {
     .bg-home::before {
-        height: 60vh;
+        height: 70vh;
     }
     
     .bg-home {
@@ -292,7 +429,7 @@
     } 
 
     .bg-container {
-        height: 70vh;
+        height: 80vh;
     }
 
 }
@@ -300,7 +437,7 @@
 
 @media(min-width: 1200px) and (max-width: 1920px) {
     .bg-home::before {
-        height: 60vh;
+        height: 80vh;
     }
     
     .bg-home {
@@ -308,9 +445,9 @@
     } 
 
     .bg-container {
-        height: 65vh;
+        height: 100vh;
     }
-}
+} */
 
 
 
